# uv-template

./: .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/commands/: commit.md
notebooks/: test-setup.ipynb
scripts/: hello.py
src/uv_template/: __init__.py  play.py
tests/: test_play.py
